# XKineticEngine

./: .gitignore  .gitmodules  :w  Build.bat  Build.sh  CMakeCache.txt  CMakeLists.txt  Clean.bat  Clean.sh  LICENSE  Makefile  Makefile.XKCore.linux  Makefile.XKCore.win32  Makefile.XKDirectX12.win32  Makefile.XKEditor.linux  Makefile.XKEditor.win32  Makefile.XKMath.linux  Makefile.XKMath.win32  Makefile.XKTests.linux  Makefile.XKTests.win32  Makefile.XKVulkan.linux  Makefile.XKVulkan.win32  Makefile.XKinetic.linux  Makefile.XKinetic.win32  README.md  cmake_install.cmake
Tests/: CMakeLists.txt  Makefile.XKEditor.linux  Makefile.XKEditor.win32  Makefile.XKVulkanTest.linux  Makefile.XKVulkanTest.win32
Tests/D3D12Test/: CMakeLists.txt
Tests/D3D12Test/XKD3D12Test/: D3D12Test.c  Entry.c
Tests/DirectX12Test/: CMakeLists.txt
Tests/DirectX12Test/XKDirectX12Test/: DirectX12Test.c
Tests/Editor/XKEditor/: Editor.c  Entry.c
Tests/OpenXRTest/: CMakeLists.txt
Tests/OpenXRTest/XKOpenXRTest/: OpenXRTest.c
Tests/VulkanTest/: CMakeLists.txt
Tests/VulkanTest/XKVulkanTest/: VulkanTest.c
Tests/WindowTest/: CMakeLists.txt
Tests/WindowTest/XKWindowTest/: WindowTest.c
XKCore/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
XKCore/XKinetic/: Application.h  Defines.h  Entry.h  Typedefs.h  XKCore.h
XKCore/XKinetic/Core/: Arg.h  Assert.c  Assert.h  Console.c  Console.h  DynamicAllocator.c  DynamicAllocator.h  DynamicArray.c  DynamicArray.h  Event.h  File.c  File.h  FreeList.c  FreeList.h  HashTable.c  HashTable.h  LinearAllocator.c  LinearAllocator.h  Log.c  Log.h  Memory.c  Memory.h  Minimal.h  Module.c  Module.h  PoolAllocator.c  PoolAllocator.h  StackAllocator.c  StackAllocator.h  String.c  String.h  Thread.c  Thread.h  Time.c  Time.h  Types.h  UniquePointer.h  WString.c  WString.h  Window.c  (+1 more)
XKCore/XKinetic/Math/: Cbrt.c  Exp.c  Floor.c  Log.c  Mat2.h  Mat3.h  Mat4.h  Math.h  Pow.c  Vec2.h  Vec3.h  Vec4.h
XKCore/XKinetic/OpenXR/: Context.c  Instance.c  Internal.h
XKCore/XKinetic/Platform/: Console.h  Entry.h  Event.h  External.h  File.h  Internal.h  Joystick.c  Joystick.h  Memory.c  Memory.h  Module.h  Platform.c  Thread.h  Time.c  Time.h  Window.c  Window.h
XKCore/XKinetic/Platform/Cocoa/: Internal.h  Joystick.m  Window.m
XKCore/XKinetic/Platform/Linux/: Console.c  Entry.h  ErrorHandler.c  External.h  File.c  Internal.h  Joystick.c  Memory.c  Module.c  Thread.c  Time.c  Window.c
XKCore/XKinetic/Platform/Posix/: Console.c  Entry.h  File.c  Handler.c  Internal.h  Memory.c  Module.c  Thread.c  Time.c
XKCore/XKinetic/Platform/Unix/: Console.c  ErrorHandler.c  External.h  File.c  Internal.h  Memory.c  Module.c  Thread.c  Time.c
XKCore/XKinetic/Platform/Win32/: Console.c  Entry.h  ErrorHandler.c  External.h  File.c  Handler.c  Internal.h  Joystick.c  Memory.c  Module.c  Thread.c  Time.c  Window.c
XKCore/XKinetic/Renderer/: External.h
XKD3D12/: CMakeLists.txt
XKD3D12/XKinetic/: XKD3D12.h  XKDirectX12.h
XKD3D12/XKinetic/D3D12/: Context.c  Internal.h  Renderer.c  Renderer.h
XKD3D12/XKinetic/D3D12/Command/: CommandAllocator.c  CommandList.c  CommandQueue.c
XKD3D12/XKinetic/D3D12/Debug/: DebugLayer.c
XKD3D12/XKinetic/D3D12/Descriptor/: DescriptorHeap.c
XKD3D12/XKinetic/D3D12/Device/: Adapter.c  Device.c  Factory.c
XKD3D12/XKinetic/D3D12/Interfaces/: DebugDevice.c  InfoQueue.c
XKD3D12/XKinetic/D3D12/SwapChain/: SwapChain.c
XKD3D12/XKinetic/D3D12/SyncObjects/: Fence.c
XKD3D12/XKinetic/DirectX12/: Context.c  Internal.h  Renderer.c  Renderer.h
XKD3D12/XKinetic/DirectX12/Command/: CommandAllocator.c  CommandList.c  CommandQueue.c
XKD3D12/XKinetic/DirectX12/Debug/: DebugLayer.c
XKD3D12/XKinetic/DirectX12/Descriptor/: DescriptorHeap.c
XKD3D12/XKinetic/DirectX12/Device/: Adapter.c  Device.c  Factory.c
XKD3D12/XKinetic/DirectX12/Interfaces/: DebugDevice.c  InfoQueue.c
XKD3D12/XKinetic/DirectX12/SwapChain/: SwapChain.c
XKD3D12/XKinetic/DirectX12/SyncObjects/: Fence.c
XKDirectX12/: CMakeLists.txt  Makefile  cmake_install.cmake
XKDirectX12/XKinetic/: XKDirectX12.h
XKDirectX12/XKinetic/DirectX12/: Context.c  Context.cpp  Internal.h  Renderer.c  Renderer.h
XKDirectX12/XKinetic/DirectX12/Command/: CommandAllocator.c  CommandList.c  CommandQueue.c
XKDirectX12/XKinetic/DirectX12/Debug/: DebugLayer.c
XKDirectX12/XKinetic/DirectX12/Descriptor/: DescriptorHeap.c
XKDirectX12/XKinetic/DirectX12/Device/: Adapter.c  Device.c  Factory.c
XKDirectX12/XKinetic/DirectX12/Interfaces/: DebugDevice.c  InfoQueue.c
XKDirectX12/XKinetic/DirectX12/SwapChain/: SwapChain.c
XKEditor/: CMakeLists.txt  Makefile  cmake_install.cmake
XKEditor/XKEditor/: Editor.c  Entry.c
XKMath/: CMakeLists.txt  Makefile  cmake_install.cmake
XKMath/XKinetic/: XKMath.h
XKMath/XKinetic/Math/: Abs.c  Cbrt.c  Ceil.c  Cos.c  Exp.c  Exp2.c  FMod.c  FRExp.c  Floor.c  Internal.h  LDExp.c  Log2.c  Mat2.h  Mat3.h  Mat4.h  Math.h  ModF.c  Pow.c  Round.c  Sin.c  Sqrt.c  Tan.c  Trunc.c  Vec2.h  Vec3.h  Vec4.h
XKOpenXR/: CMakeLists.txt
XKOpenXR/XKinetic/: XKOpenXR.h
XKOpenXR/XKinetic/OpenXR/: Action.c  ActionSet.c  ActionSpace.c  Context.c  Instance.c  Interface.h  Internal.h  ProfileBindings.c  ReferenceSpace.c  Session.c  SwapChain.c  System.c
XKOpenXR/XKinetic/OpenXR/Actions/: Action.c  (+1 more)
XKVulkan/: CMakeLists.txt  Makefile  cmake_install.cmake
XKVulkan/XKinetic/: XKVulkan.h
XKVulkan/XKinetic/Vulkan/: Context.c  Internal.h  Renderer.c  Renderer.h
XKinetic/: CMakeLists.txt  Makefile  cmake_install.cmake
XKinetic/XKinetic/: Application.h  Entry.h  XKinetic.h
XKinetic/XKinetic/Renderer/: Context.c  External.h  Internal.h  Renderer.c  Renderer.h
XKinetic/XKinetic/Resources/: Image.h  Material.h  Model.c  Model.h  Shader.c  Shader.h  Texture.c  Texture.h
XKinetic/XKinetic/Scene/: Components.h  Entity.c  Entity.h  Scene.c  Scene.h  SceneManager.c  SceneManager.h
XKinetic/XKinetic/Systems/: MaterialSystem.c  MaterialSystem.h  MeshSystem.c  MeshSystem.h  ModelSystem.c  ModelSystem.h  ShaderSystem.c  ShaderSystem.h  TextureSystem.c  TextureSystem.h
(+31 files in other folders)
