set(ENGINE_SRC_DIR ${PROJECT_SOURCE_DIR}/XKinetic)

file(GLOB_RECURSE ENGINE_SRC ${ENGINE_SRC_DIR}/*.c)

add_library(${PROJECT_NAME} SHARED ${ENGINE_SRC})

target_include_directories(${PROJECT_NAME} PUBLIC ${ENGINE_SRC_DIR} ${PROJECT_SOURCE_DIR}/XKCore ${PROJECT_SOURCE_DIR}/XKMath /home/freeman/Documents/XKineticEngine/XKVulkan ${PROJECT_SOURCE_DIR}/XKDirectX12)
